@@ -117,4 +117,12 @@ public abstract class SortedSetDocValues {
 
     return -(low + 1);  // key not found.
   }
+  
+  /** 
+   * Returns a {@link TermsEnum} over the values.
+   * The enum supports {@link TermsEnum#ord()} and {@link TermsEnum#seekExact(long)}.
+   */
+  public TermsEnum termsEnum() {
+    return new SortedSetDocValuesTermsEnum(this);
+  }
 }
